--- a/mainPage.css
+++ b/mainPage.css
@@ -1,6 +1,47 @@
 * {
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
+body {
+  /* background-image: url(zara-stall.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; */
+  background-color: #222831;
+}
+video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+#menu_bar_left {
+  position: absolute;
+  display: none;
+  width: 20%;
+  height: 80%;
+  margin-top: 6%;
+  margin-left: 0px;
+  background-color: white;
+  border-radius: 20px;
+}
+.categories ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 4vh;
+}
+#menu_bar_left ul li {
+  list-style: none;
+  font-size: small;
+  margin-left: -2em;
+}
+#menu_bar_left ul li a {
+  text-decoration: none;
+  color: black;
+}
 header {
   position: fixed;
   top: 0%;
@@ -18,22 +59,44 @@ header {
 }
 .header1 {
   display: flex;
-  justify-content: space-around;
-  width: 30%;
+  justify-content: flex-start;
 }
-.header1 p {
-  font-size: 7vh;
+.header1 img {
+  width: 7vh;
+  opacity: 0.7;
+}
+.header1 button {
+  border-radius: 8px;
+}
+#header2 {
+  display: flex;
+  justify-content: flex-start;
+  width: 40%;
+}
+#header2 p {
+  font-size: 8vh;
   font-weight: bold;
-  margin: auto;
+  display: contents;
+  justify-content: flex-start;
+  color: black;
 }
-.header2 {
-  width: 25%;
+.header3 {
+  width: 35%;
   display: flex;
   justify-content: space-evenly;
+}
+.header3 a {
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  font-size: 3vh;
+  margin-right: 4vh;
+  margin-top: 2vh;
+  text-shadow: 2px 2px 2px #000000;
 }
 
 .long_main_page {
   width: 100%;
   height: 100%;
-  background-color: green;
+  /* background-color: green; */
 }
