--- a/login_sign.css
+++ b/login_sign.css
@@ -10,6 +10,9 @@ body {
   background-size: cover; */
   /* background-color: #eee; */
 }
+a {
+  text-decoration: none;
+}
 video {
   position: fixed;
   right: 0;
