--- a/mainPage.css
+++ b/mainPage.css
@@ -10,6 +10,9 @@ body {
   background-size: cover; */
   background-color: #222831;
 }
+a {
+  text-decoration: none;
+}
 video {
   position: fixed;
   right: 0;
